# drive

./: .gitignore  Cargo.toml  Config.toml.example  Dioxus.toml  README.md  package-lock.json  package.json  playwright.config.js  style.css
.github/actions/: setup-rust.yaml
.github/actions/setup-dioxus/: action.yaml
.github/workflows/: analysis.yaml  build.yaml  cd.yaml  ci-cd.yaml  ci.yaml  code-analysis.yaml  deploy.yaml  tests.yaml
app/: Cargo.toml  build.rs  playwright.config.js  style.css
app/end2end/: create_folder.spec.js  login_and_logout.spec.js  shared_expects.js  storage_page.spec.js  upload_file.spec.js
app/src/: constants.rs  forms.rs  hooks.rs  icons.rs  layouts.rs  local_data.rs  main.rs  presenters.rs  routes.rs  signals.rs  utils.rs
app/src/components/: file_manager.rs  mod.rs  modals.rs
app/src/layouts/: guest_layout.rs  mod.rs  user_layout.rs
app/src/pages/: authorized_page.rs  confirm_checkout_page.rs  file_page.rs  folder_page.rs  home_page.rs  login_page.rs  mod.rs  register_page.rs  storage_page.rs  trash_page.rs  user_page.rs
app/src/server_fns/: file_server_fns.rs  folder_server_fns.rs  login_server_fns.rs  mod.rs  trash_server_fns.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: inputs.rs  lib.rs  test_utils.rs
core/src/server/: config.rs  constants.rs  mod.rs  models.rs
core/src/server/commands/: file_commands.rs  folder_commands.rs  folder_item_commands.rs  mod.rs  plan_commands.rs  session_commands.rs  trash_commands.rs  user_commands.rs
end2end/: create_folder.spec.js  home.spec.js  home_page.spec.js  login_and_logout.spec.js  register.spec.js  register_user.spec.js  shared_expects.js
lime3-app/: Cargo.toml  playwright.config.js  style.css
lime3-app/end2end/: edit_space.spec.js  login_and_logout.spec.js  register.spec.js  shared_expects.js  upload_file.spec.js
lime3-app/src/: components.rs  forms.rs  hooks.rs  icons.rs  main.rs  presenters.rs  routes.rs  server.rs  server_functions.rs  utils.rs
lime3-app/src/components/: file_manager.rs  mod.rs  modals.rs
lime3-app/src/layouts/: guest_layout.rs  mod.rs  user_layout.rs
lime3-app/src/pages/: checkout_success_page.rs  confirm_checkout_page.rs  file_page.rs  folder_page.rs  home_page.rs  login_page.rs  mod.rs  register_page.rs  storage_page.rs  trash_page.rs
lime3-app/src/server_fns/: login_server_fns.rs  mod.rs  trash_server_fns.rs
lime3-cli/: Cargo.toml
lime3-cli/src/: main.rs
lime3-core/: Cargo.toml
lime3-core/src/: enums.rs  inputs.rs  test_utils.rs
lime3-core/src/server/: commands.rs  config.rs  constants.rs  mod.rs  models.rs
lime3-core/src/server/commands/: access_token_commands.rs  mod.rs  plan_commands.rs  user_commands.rs
migrations/: 20250729172457_create_table_user_sessions.up.sql  20250731163837_create_table_folders.down.sql  20250731163837_create_table_folders.up.sql  20250806160624_create_table_files.up.sql  20250811230351_add_membership_to_users.down.sql  20250811230351_add_membership_to_users.up.sql  20250823221341_add_total_space_to_users.down.sql  20250823221341_add_total_space_to_users.up.sql  20250829031922_create_table_plans.down.sql  20250829031922_create_table_plans.up.sql  20250830232859_create_table_access_tokens.down.sql  20250830232859_create_table_access_tokens.up.sql  20250902233818_add_trashed_at_to_files_and_folders.down.sql  20250902233818_add_trashed_at_to_files_and_folders.up.sql  20250925214854_create_table_file_keys.down.sql  20250925214854_create_table_file_keys.up.sql  20251008144726_create_table_sessions.down.sql  20251008144726_create_table_sessions.up.sql
src/: components.rs  enums.rs  forms.rs  icons.rs  inputs.rs  layout.rs  lib.rs  main.rs  presenters.rs  routes.rs  server_functions.rs  test_utils.rs
src/pages/: home_page.rs  login_page.rs  register_page.rs
src/server/: commands.rs  config.rs  constants.rs  mod.rs  models.rs  session.rs
