[workspace]
resolver = "3"
members = ["lime3-app", "lime3-cli", "lime3-core"]

[workspace.package]
version = "0.0.0-alpha.0"
edition = "2024"
authors = ["Javier E. <jaedns@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0.99"
bytesize = { version = "2.0.1", features = ["serde"] }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
rust_iso3166 = "0.1.14"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.143"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }
validator = "0.20.0"
lime3-core = { path = "lime3-core" }
