[workspace]
resolver = "3"
members = ["app", "cli", "core"]

[workspace.package]
version = "0.0.0-alpha.1"
edition = "2024"
authors = ["Javier E. <jaedns@gmail.com>"]
homepage = "https://drive.mango3.app"
repository = "https://github.com/mangocubed/drive"

[workspace.dependencies]
anyhow = "1.0.100"
bytesize = { version = "2.1.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
rust_iso3166 = "0.1.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }
validator = "0.20.0"
sdk = { git = "https://github.com/mangocubed/sdk.git", features = [
    "auth-client",
], tag = "v0.0.0-alpha.6" }
drive-core = { path = "core" }
