[package]
name = "drive-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
chrono = { workspace = true }
sdk = { workspace = true, features = ["build"] }

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { version = "0.8.5", optional = true }
axum-extra = { version = "0.10.3", features = [
    "typed-header",
], optional = true }
bytesize = { workspace = true, optional = true }
chrono = { workspace = true }
dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }
directories = { version = "6.0.0", optional = true }
futures = { workspace = true }
headers = { version = "0.4.1", optional = true }
jni = { version = "0.21.1", default-features = false, optional = true }
reqwest = { version = "0.12.23", default-features = false, optional = true }
rust_iso3166 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
validator = { workspace = true }
web-sys = { version = "0.3.81", features = [
    "HtmlAnchorElement",
    "Window",
    "Storage",
], optional = true }
drive-core = { workspace = true }
sdk = { workspace = true, features = ["dioxus-fullstack"] }

[features]
default = ["web"]
web = ["dep:web-sys", "dioxus/web", "sdk/dioxus-web"]
desktop = [
    "dep:directories",
    "dep:reqwest",
    "dioxus/desktop",
    "sdk/dioxus-desktop",
]
mobile = ["dep:jni", "dep:reqwest", "dioxus/mobile", "sdk/dioxus-mobile"]
server = [
    "dep:anyhow",
    "dep:axum",
    "dep:axum-extra",
    "dep:bytesize",
    "dep:headers",
    "dep:tokio",
    "dioxus/server",
    "drive-core/server",
    "sdk/dioxus-server",
]
