[package]
name = "drive-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
chrono = { workspace = true }
sdk = { workspace = true, features = ["build"] }

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { version = "0.8.6", optional = true }
bytesize = { workspace = true, optional = true }
chrono = { workspace = true }
dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }
futures = { workspace = true }
headers = { version = "0.4.1", optional = true }
reqwest = { version = "0.12.24", default-features = false, optional = true }
rust_iso3166 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
validator = { workspace = true }
web-sys = { version = "0.3.81", features = [
    "HtmlAnchorElement",
    "Window",
    "Storage",
], optional = true }
drive-core = { workspace = true }
sdk = { workspace = true, features = ["dioxus-fullstack"] }

[features]
default = ["web"]
web = ["dep:web-sys", "dioxus/web", "sdk/dioxus-web"]
desktop = ["dep:reqwest", "dioxus/desktop", "sdk/dioxus-desktop"]
mobile = ["dep:reqwest", "dioxus/mobile", "sdk/dioxus-mobile"]
server = [
    "dep:anyhow",
    "dep:axum",
    "dep:bytesize",
    "dep:headers",
    "dep:tokio",
    "dioxus/server",
    "drive-core/server",
    "sdk/dioxus-server",
]
