[package]
name = "drive-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = "4.5.49"
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
drive-core = { workspace = true, features = ["server"] }

[features]
default = []
test-utils = ["drive-core/test-utils"]
