[package]
name = "lime3-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { version = "0.8.4", optional = true }
bytesize = { workspace = true, optional = true }
cookie = { version = "0.18.1", features = ["private"], optional = true }
dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }
fred = { version = "10.1.0", optional = true }
futures = { version = "0.3.31", optional = true }
rust_iso3166 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { version = "0.3.41", optional = true }
tokio = { workspace = true, optional = true }
tower-sessions = { version = "0.14.0", features = ["private"], optional = true }
tower-sessions-redis-store = { version = "0.16.0", optional = true }
url = { workspace = true, features = ["serde"] }
validator = { workspace = true }
lime3-core = { workspace = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dep:anyhow",
    "dep:axum",
    "dep:bytesize",
    "dep:cookie",
    "dep:fred",
    "dep:futures",
    "dep:time",
    "dep:tokio",
    "dep:tower-sessions",
    "dep:tower-sessions-redis-store",
    "dioxus/server",
    "lime3-core/server",
]
