[package]
name = "lime3-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
argon2 = { version = "0.5.3", optional = true }
bytesize = { workspace = true, optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
figment = { version = "0.10.19", features = ["env", "toml"], optional = true }
file-format = { version = "0.28.0", optional = true }
image = { version = "0.25.8", features = ["serde"], optional = true }
md-5 = { version = "0.10.6", optional = true }
polar-rs = { version = "0.0.0-alpha.5", optional = true }
rand = { version = "0.9.2", optional = true }
regex = { version = "1.11.2", optional = true }
rust_iso3166 = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
], optional = true }
strum = { version = "0.27.2", features = ["derive"], optional = true }
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
fake = { version = "4.4.0", features = ["chrono"] }
rand = "0.9.2"

[features]
server = [
    "dep:anyhow",
    "dep:argon2",
    "dep:bytesize",
    "dep:figment",
    "dep:file-format",
    "dep:image",
    "dep:md-5",
    "dep:polar-rs",
    "dep:rand",
    "dep:regex",
    "dep:sqlx",
    "dep:strum",
    "dep:tokio",
    "dep:url",
    "validator/derive",
]
